center highlights and make sure .highlight__img is only wrapping the image

--- a/styles.css
+++ b/styles.css
@@ -147,4 +147,8 @@ HIGHLIGHTS
 .highlight {
     padding: 0 24px;
     width: calc(100% / 3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
